# sdp-project

./: README.md  schema.graphql  schema.sql
api-server/: Cargo.toml
api-server/src/: auth.rs  error.rs  main.rs  verify_mail.rs
api-server/src/auth/: auth.rs
api-server/src/entity/: address_types.rs  addresses.rs  bills.rs  card_types.rs  cart_items.rs  categories.rs  customers.rs  discounts.rs  mod.rs  order_items.rs  orders.rs  payment_methods.rs  prelude.rs  product_discounts.rs  product_variant_options.rs  products.rs  reviews.rs  sea_orm_active_enums.rs  shopping_carts.rs  suppliers.rs  users.rs
api-server/src/graphql/: addresses_objects.rs  carts_objects.rs  mod.rs  mutation_root.rs  orders_objects.rs  payments_objects.rs  query_root.rs  schema.rs  users_objects.rs
api-server/src/graphql/products_objects/: mod.rs  products_mutations.rs  products_query.rs
api-server/src/models/: addresses.rs  bills.rs  carts.rs  mod.rs  orders.rs  payments.rs  products.rs  user.rs
cdn-server/: .gitignore  Cargo.toml
cdn-server/src/: download.rs  main.rs  upload.rs
