[package]
name = "api-server"
version = "0.1.0"
edition = "2021"

[dependencies]
argon2 = "0.5.3"
async-graphql = { version = "7.0.11", features = ["chrono"] }
async-graphql-axum = "7.0.11"
axum = "0.7.9"
chrono = { version = "0.4.38", features = ["serde"] }
dotenv = "0.15.0"
jsonwebtoken = "9.3.0"
lazy-regex = "3.3.0"
redis = { version = "0.27.5", features = ["tokio-comp"] }
sea-orm = { version = "1.1.1", features = ["sqlx-postgres", "runtime-tokio-native-tls", "macros"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
thiserror = "2.0.3"
tokio = { version = "1.41.1", features = ["full"] }
