[package]
name = "api-server"
version = "0.1.0"
edition = "2021"

[dependencies]
argon2 = "0.5.3"
async-graphql = { version = "7.0.11", features = ["chrono"] }
async-graphql-axum = "7.0.11"
axum = "0.7.9"
chrono = { version = "0.4.38", features = ["serde"] }
dotenv = "0.15.0"
jsonwebtoken = "9.3.0"
lazy-regex = "3.3.0"
sea-orm = { version = "1.1.2", features = ["sqlx-postgres", "runtime-tokio-native-tls", "macros"] }
serde = { version = "1.0.215", features = ["derive"] }
thiserror = "2.0.4"
tokio = { version = "1.42.0", features = ["full"] }
tower-http = { version = "0.6.2", features = ["cors"] }
tower = "0.5.2"
mail-send = "0.4.9"
